tests/fail/wrong_return_type.stderr
error[E0308]: mismatched types
  --> tests/fail/wrong_return_type.rs:12:12
   |
12 | #[decorate(bad_return_decorator)]
   |            ^^^^^^^^^^^^^^^^^^^^ expected `i32`, found `String`
13 | fn test_function() -> i32 {
   |                       --- expected `i32` because of return type
